--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: ShiftToFix
 version: 2.0
 main: rx5600xt.sxqe.shifttofix.ShiftToFix
-api-version: 1.20
 description: A plugin to enhance shift-click behavior
+api-version: '1.13'
 author: RX_5600XT
 
 commands:
